--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
     --fw_semi_bold: 600;
     --fw_bold: 700;
 }
-
 body {
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
@@ -15,22 +14,18 @@ body {
     color: var(--primary-color);
     line-height: 1.5;
 }
-
 .container {
     width: 80%;
     padding: 0px 15px;
     margin: 0 auto;
 }
-
 a {
     text-decoration: none;
     color: inherit;
 }
-
 img {
     width: 100%;
 }
-
 h1,
 h2,
 h3,
@@ -42,7 +37,6 @@ ul {
     margin: 0;
 }
 
-
 /* Start Menu */
 
 .main-header,
@@ -52,31 +46,25 @@ ul {
     align-items: center;
     padding-top: 87px;
 }
-
 .logo h2 {
     font-size: 24px;
     font-weight: var(--fw_bold);
 }
-
 .menu ul {
     display: flex;
 }
-
 .menu ul li {
     list-style: none;
     padding-left: 34px;
 }
-
 .menu ul li a {
     font-size: 16px;
     font-weight: var(--fw_semi_bold);
 }
-
 .main-mobile-header .logo h2,
 .main-mobile-header i {
     font-size: 16px;
 }
-
 
 /* End Menu */
 
@@ -86,28 +74,23 @@ ul {
 .banner-section {
     padding: 50px 0px 69px;
 }
-
 .banner {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-
 .banner-left,
 .banner-right {
     flex-basis: 45%;
 }
-
 .banner-left h3 {
     font-size: 52px;
     padding-bottom: 33px;
 }
-
 .banner-left p {
     font-weight: var(--fw_semi_bold);
     padding-bottom: 35px;
 }
-
 .banner-btn {
     display: block;
     width: 196px;
@@ -123,27 +106,22 @@ ul {
     letter-spacing: 0;
     transition: all .5s linear;
 }
-
 .banner-btn:hover {
     letter-spacing: 1px;
     background-color: transparent;
     border: 1px solid #E02C6D;
     color: var(--primary-color);
 }
-
 .banner-btn i {
     padding-left: 8px;
 }
-
 .banner-right {
     position: relative;
     padding-bottom: 30px;
 }
-
 .banner-right img {
     transition: all 0.3s ease-in-out 100ms;
 }
-
 .banner-right::before {
     content: '';
     position: absolute;
@@ -157,11 +135,9 @@ ul {
     background-position: center center;
     z-index: -1;
 }
-
 .banner-right:hover img {
     transform: rotateY(180deg);
 }
-
 
 /* End Banner Section */
 
@@ -171,7 +147,6 @@ ul {
 .partner {
     padding-bottom: 100px;
 }
-
 .partner-wrap {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
@@ -186,7 +161,6 @@ ul {
     padding: 36px 0;
 }
 
-
 /* End Partner Section */
 
 
@@ -195,20 +169,17 @@ ul {
 .popular {
     padding-bottom: 100px;
 }
-
 .section-title {
     font-size: 28px;
     font-weight: var(--fw_semi_bold);
     text-align: center;
     padding-bottom: 50px;
 }
-
 .popular-collection {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 30px;
 }
-
 .popular-box {
     flex-basis: 30%;
     background-color: #fff;
@@ -219,69 +190,129 @@ ul {
     border: 1px solid transparent;
     transition: all 0.3s ease-in-out;
 }
-
 .popular-box:hover {
     border: 1px dashed #3a3a3a50;
 }
-
 .popular-box-img {
     overflow: hidden;
     border-radius: 5px;
     height: 290px;
 }
-
 .popular-box-img img {
     transition: all 0.3s ease-in-out;
 }
-
 .popular-box-img:hover img {
     transform: scale(1.1);
     border-radius: 5px;
 }
-
 .popular-box-title {
     font-size: 28px;
     text-transform: capitalize;
     font-weight: var(--fw_medium);
     padding-top: 25px;
 }
-
 .popular-box-price {
     font-size: 24px;
     color: #00000087;
     padding-bottom: 20px;
 }
-
 .popular-box-rating {
     display: flex;
     align-items: center;
     gap: 10px;
     padding-bottom: 10px;
 }
-
 .popular-box-icon i {
     color: #fbb200;
 }
-
 .popular-box-rating-text {
     font-size: 14px;
     font-weight: var(--fw_bold);
     color: #5E6366;
 }
-
 .popular-box-content {
     line-height: 1;
 }
-
 .popular-box-text {
     font-size: 14px;
     font-weight: var(--fw_bold);
     color: #787885;
     padding-bottom: 10px;
 }
-
+.popular-link {
+    display: block;
+    text-align: right;
+    margin-top: 50px;
+    font-size: 16px;
+    font-weight: var(--fw_bold);
+    color: rgba(224, 44, 189, 087);
+}
+.popular-link i {
+    padding-left: 8px;
+}
 
 /* End Popular Collection */
+
+
+/* Start Transtions Section */
+
+.t-effect {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+    padding-bottom: 100px;
+}
+.flip-box {
+    transform-style: preserve-3d;
+    perspective: 1000px;
+}
+.flip-box-front,
+.flip-box-back {
+    background-size: cover;
+    background-position: center;
+    border-radius: 5px;
+    min-height: 475px;
+    transition: transform 0.7s cubic-bezier(.4, .2, .2, 1);
+}
+.flip-box-front {
+    transform: rotateY(0deg);
+    transform-style: preserve-3d;
+    background: #C33764;
+    background: linear-gradient(45deg, #1D2671 10%, #C33764 80%);
+}
+.flip-box:hover .flip-box-front {
+    transform: rotateY(-180deg);
+    transform-style: preserve-3d;
+}
+.flip-box-back {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    transform: rotateY(180deg);
+    transform-style: preserve-3d;
+    background: #C33764;
+    background: linear-gradient(-45deg, #1D2671 10%, #C33764 80%);
+}
+.flip-box:hover .flip-box-back {
+    transform: rotateY(0deg);
+    transform-style: preserve-3d;
+}
+.flip-box .inner {
+    position: absolute;
+    left: 0;
+    width: 100%;
+    padding: 60px;
+    outline: 1px solid transparent;
+    perspective: inherit;
+    z-index: 2;
+    transform: translateY(-50%) translateZ(60px) scale(.94);
+    top: 50%;
+    font-size: 48px;
+    color: #fff;
+}
+
+/* End Transtions Section */
 
 
 /* Start Footer */
@@ -292,19 +323,16 @@ footer {
     background-color: #0A0826;
     color: #fff;
 }
-
 .footer-title {
     font-size: 24px;
     font-weight: var(--fw_bold);
     padding-bottom: 20px;
 }
-
 .footer-text {
     font-size: 14px;
     font-weight: var(--fw_bold);
     padding-bottom: 10px;
 }
-
 .footer-social {
     display: flex;
     justify-content: center;
@@ -312,7 +340,6 @@ footer {
     gap: 16px;
     padding-inline-start: 0;
 }
-
 .footer-social li {
     list-style: none;
     width: 32px;
@@ -324,12 +351,10 @@ footer {
     transition: all 0.3s ease-in-out;
     border: 1px solid transparent;
 }
-
 .footer-social li:hover {
     border: 1px dashed #fff;
     color: #fff;
 }
-
 
 /* End Footer */
 
@@ -341,7 +366,6 @@ footer {
         display: none;
     }
 }
-
 @media screen and (max-width:768px) {
     .container {
         width: 90%;
@@ -390,7 +414,6 @@ footer {
     }
     /* End Banner Section */
 }
-
 @media screen and (max-width:768px) {
     .partner {
         padding-bottom: 50px;
